--- a/src/shell/components/global-sidebar/GlobalSidebar.less
+++ b/src/shell/components/global-sidebar/GlobalSidebar.less
@@ -17,6 +17,10 @@
     color: @zesty-field-blue;
     letter-spacing: 1px;
     padding: 8px;
+    text-align: center;
+    &.Open {
+      text-align: left;
+    }
     svg {
       font-size: 16px;
       margin-right: 8px;
